@@ -1570,3 +1570,6 @@
 	  PullUp/Down Input Configuration.
 	* arch/arm/src/lpc17xx/lpc17_serial.h -- Now supports Auto-RTS and
 	  Auto-CTS modes.  This is needed to support SLIP.
+	* drivers/net/slip.c -- SLIP is now basically functional on the
+	  LPC17xx with some caveats as described in the TODO list under
+	  LPC17xx.
